<resources>
    <string name="app_name">RateMyPlateUploadPlate</string>
    <string name="upload">Upload</string>
    <string name="name">Name</string>
    <string name="choose_image">Choose image</string>
    <string name="caption">Caption</string>
    <string name="take_photo">Take photo</string>
    <string name="todo">TODO</string>
    <string name="plate_name_goes_here">Plate Name Goes Here</string>
    <string name="caption_goes_here">Caption goes here</string>
</resources>
